Removed Arrays.asList in favor of List.of